--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -24,7 +24,7 @@
         <div class="col-3">
 
             <!-- Category details -->
-            <div class="card" style="width: 17rem;">
+            <div class="card" style="me-2">
                 <div class="card-body">
                     <h4 class="card-title">Category <span class="badge bg-danger">{{category.name}}</span></h4>
                     <p class="card-text">{{category.description}}</p>
