About me page front-end setup.

--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -96,12 +96,12 @@
                     <h5>Used technology (logout)</h5>
                     <hr>
                     <ol>
-                        <li>django</li>
-                        <li>python</li>
-                        <li>pandas</li>
-                        <li>plotly</li>
-                        <li>numpy</li>
-                        <li>bootstrap</li>
+                        <li>python 3.10.8</li>
+                        <li>django 4.1.1</li>
+                        <li>pandas 1.5.0</li>
+                        <li>plotly 5.10.0</li>
+                        <li>numpy 1.23.3</li>
+                        <li>bootstrap 5.2</li>
                     </ol>
                 </div>
             </div>
