--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -33,17 +33,48 @@
                     <li class="list-group-item"><b>Total time:</b> {{category.total_time}}</li>
                 </ul>
                 <div class="card-footer d-inline-flex justify-content-end">
-                    <a href="{% url 'app_tracker:category_edit' category.id %}" class="btn btn-sm btn-secondary me-1" >
+                    <!-- Edit category - trigger modal -->
+                    <button type="button" class="btn btn-secondary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#edit-category-Modal">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"></path>
                         </svg>
-                    </a>
-
+                    </button>
+                    <!-- Delete category -->
                     <a href="{% url 'app_tracker:category_delete' category.id %}" class="btn btn-sm btn-danger me-1">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                             <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"></path>
                         </svg>
                     </a>
+                </div>
+            </div>
+
+            <!-- Edit category -->
+            <!-- Modal - Edit category -->
+            <div class="modal fade" id="edit-category-Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5 text-center" id="exampleModalLabel">Edit category <b>{{category.name}}</b></h1>
+                        </div>
+                        <form method="POST" id="edit_category_form">
+                            <input type="hidden" name="form_type" value="edit_category_form">
+                            {% csrf_token %}
+                            <div class="modal-body col-10 align-self-center">
+                                <div class="input-group input-group-sm flex-nowrap mb-2">
+                                    <span class="input-group-text" id="addon-wrapping">Name</span>
+                                    <input type="text" name="name" class="form-control" value="{{category.name}}" aria-label="Name" aria-describedby="addon-wrapping">
+                                </div>
+                                <div class="input-group input-group-sm flex-nowrap mb-2">
+                                    <span class="input-group-text" id="addon-wrapping">Description</span>
+                                    <input type="text" name="description" class="form-control" value="{{category.description}}" aria-label="Description" aria-describedby="addon-wrapping">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+                                <input type="submit" class="btn btn-success btn-sm" value="Save">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
 
@@ -88,20 +119,21 @@
             
             <!-- Category activities -->
             <div class="row d-flex justify-content-center">
-                
+
                 <!-- Create activity -->
                 <!-- Button - trigger modal -->
                 <div class="text-center">
-                    <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">Create new activity</button>
+                    <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#create-activity-Modal">Create new activity</button>
                 </div>
-                <!-- Modal - Create new category -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <!-- Modal - Create activity -->
+                <div class="modal fade" id="create-activity-Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h1 class="modal-title fs-5 text-center" id="exampleModalLabel">Create new activity</h1>
                             </div>
-                            <form method="POST">
+                            <form method="POST" id="create_activity_form">
+                                <input type="hidden" name="form_type" value="create_activity_form">
                                 {% csrf_token %}
                                 <div class="modal-body col-10 align-self-center">
                                     <div class="input-group input-group-sm flex-nowrap mb-2">
